# HypoTree

./: .env.example  .gitignore  README.md  hypotree_memory.db  package-lock.json  package.json  phase1.sh  phase2.sh  phase3.sh  phase4.sh  phase5.sh  phase6.sh  phase7.sh  phase8.sh  phase9.sh  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/routers/: health.py  projects.py  trees.py
apps/api/app/services/: orchestrator.py
apps/api/tests/: conftest.py  test_tree_generation.py
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/analysis/: AnalysisPlanTable.tsx  TestabilityBadge.tsx
apps/web/src/components/common/: ErrorBoundary.tsx  LiveAgentStatus.tsx  LoadingState.tsx
apps/web/src/components/dag/: ScenarioDAGView.tsx
apps/web/src/components/data-cards/: ConfidenceBadge.tsx  DataCard.tsx  GapFlag.tsx
apps/web/src/components/export/: ExportBar.tsx
apps/web/src/components/forms/: QuestionInput.tsx
apps/web/src/components/memory/: PastCases.tsx
apps/web/src/components/stress-test/: StressTestReport.tsx
apps/web/src/components/tree/: HypothesisTree.tsx  NodeDetailPanel.tsx
apps/web/src/components/workplan/: WorkplanView.tsx
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/stores/: projectStore.ts
apps/web/src/types/: analysis.ts  hypothesis.ts  project.ts
infra/docker/: docker-compose.dev.yml  docker-compose.yml
infra/terraform/: outputs.tf
