[project]
name = "hypotree-api"
version = "0.1.0"
description = "HypoTree - Agentic Strategy Decomposition Engine"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
